kubernetes/infra/istio/gateway.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: Gateway
metadata:
  name: public-gateway
  namespace: istio-system
spec:
  gatewayClassName: istio
  infrastructure:
    annotations:
      oci.oraclecloud.com/load-balancer-type: "nlb"
      oci-network-load-balancer.oraclecloud.com/oci-network-load-balancer-shape: "flexible"
      oci-network-load-balancer.oraclecloud.com/oci-network-load-balancer-is-preserve-source: "true"
      sidecar.istio.io/proxyCPU: "50m"
  listeners:
    - name: http
      port: 80
      protocol: HTTP
      allowedRoutes:
        namespaces:
          from: All
    - name: https-apex
      port: 443
      protocol: HTTPS
      hostname: "ggang.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: public-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
    - name: https-wildcard
      port: 443
      protocol: HTTPS
      hostname: "*.ggang.cloud"
      tls:
        mode: Terminate
        certificateRefs:
          - kind: Secret
            name: public-wildcard-tls
      allowedRoutes:
        namespaces:
          from: All
